<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myCourses</string>
    <string name="text_appversion">Version</string>
    <string name="main_id_text_field_hint">Enter Your ID</string>
    <string name="main_submit_button_text">Verify</string>
    <string name="verify_submit_button_text">Next</string>
    <string name="verify_code_text_field_hint">Enter verification code</string>
    <string name="text_exit">Exit</string>
    <string name="text_settings">Settings</string>
    <string name="text_logo">myCourses Logo</string>
    <string name="text_changelog">Changelog</string>
    <string name="text_developedby">Developed by Ahmed Yusuf</string>
    <string name="text_close">Close</string>
    <string name="feedback_subject">myCourses App Feedback</string>
    <string name="feedback_email">A7madY911@Gmail.com</string>
    <string name="pref_changelog">Changelog</string>
    <string name="pref_changelog_summary">Changes between versions</string>
    <string name="pref_about_summary">Developed By Ahmed Yusuf</string>
    <string name="pref_about">About</string>
    <string name="pref_feedback">Feedback</string>
    <string name="text_feedback_summary">Send me your feedback</string>
    <string name="pref_header_about">ABOUT</string>
    <string name="pref_crash_reports_summary_on">Enable this to help making the app better</string>
    <string name="pref_crash_reports_summary_off">Crash reporst disabled</string>
    <string name="pref_off">Off</string>
    <string name="pref_on">On</string>
    <string name="pref_crash_reports">Crash Reports</string>
    <string name="pref_statistics">Statistics</string>
    <string name="pref_google_analytics_summary_off">Google Analytics is disabled</string>
    <string name="pref_google_analytics_summary_on">Enable this to help making the app better</string>
    <string name="pref_header_general">GENERAL</string>
    <string name="studentui_title_studentid">Student ID</string>
    <string name="studentui_title_studentname">Name</string>
    <string name="studentui_title_studentemail">Email</string>
    <string name="studentui_title_studentprog">Programme</string>
    <string name="studentui_title_studentmentor">Mentor</string>
    <string name="text_nodata">No Data</string>
    <string name="title_bar_slide">Slide Menu</string>
    <string name="coursedetailsui_title_name">Name</string>
    <string name="coursedetailsui_title_crn">CRN</string>
    <string name="coursedetailsui_title_level">Level</string>
    <string name="coursedetailsui_title_programme">Programme</string>
    <string name="coursedetailsui_title_code">Code</string>
    <string name="coursedetailsui_header_class">Class</string>
    <string name="coursedetailsui_title_tutor">Tutor</string>
    <string name="coursedetailsui_title_starttime">Start Time</string>
    <string name="coursedetailsui_title_endtime">End Time</string>
    <string name="coursedetailsui_title_location">Location</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_assessments">Assessments</string>
    <string name="staffui_title_staffname">Name</string>
    <string name="staffui_title_staffemail">Email</string>
    <string name="staffui_title_staffoffice">Office</string>
    <string name="staffui_title_staffphone">Phone</string>
    <string name="staffui_title_staffprog">Programme</string>
    <string name="enrollui_header_uni">Bahrain Polytechnic</string>
    <string name="enrollui_title_year">Year</string>
    <string name="enrollui_title_date">Date</string>
    <string name="enrollui_title_requirements">Requirements</string>
    <string name="enrollui_header_courses">Courses</string>
    <string name="coursedetailsui_title_credit">Credit</string>
    <string name="assessmentsui_title_name">Name</string>
    <string name="assessmentsui_title_weight">Weight</string>
    <string name="assessmentsui_title_due">Due</string>
    <string name="assessmentsui_title_grade">Grade</string>
    <string name="hint_entergrade">Enter your grade</string>
    <string name="assessmentui_title_gradedialog">Assessment Grade</string>
    <string name="assessmentsui_button_save">Save</string>
    <string name="assessmentsui_button_cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_call">Call</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="homefragmentui_student">Student</string>
    <string name="homefragmentui_timetable">Timetable</string>
    <string name="homefragmentui_courses">Courses</string>
    <string name="homefragmentui_acadcalendar">Academic Calendar</string>
    <string name="homefragmentui_usefullinks">Useful Links</string>
    <string name="homefragmentui_enrollmentinfo">Enrollment Info</string>
    <string name="studentui_progActionContentDescr">Show more programmes</string>
    <string name="studentui_mentorActionContentDescr">Show more information about the mentor</string>
    <string name="assessmentsui_gradeActionContentDescr">Modify assessment grade</string>
    <string name="staffui_nameActionContentDescr">Copy staff name</string>
    <string name="staffui_emailActionContentDescr">Email staff</string>
    <string name="staffui_phoneActionContentDescr">Call staff</string>
    <string name="staffui_progActionContentDescr">Show more information about the programme</string>
    <string name="coursedetailsui_progActionContentDescr">Show more information about the programme</string>
    <string name="coursedetailsui_tutorActionContentDescr">Show more information about the tutor</string>
    <string name="crash_toast_text">Sorry, I crashed, but a report has been sent to my developer to help fix the
        issue!
    </string>
    <string name="acadcalendarui_viewreader">View in PDF Reader</string>
    <string name="acadcalendarui_viewbrowser">View in Browser</string>
    <string name="acadcalendarui_sharepdf">Share PDF File</string>
    <string name="acadcalendarui_sharelink">Share Web Link</string>
</resources>
