<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
    android:padding="@dimen/main_layout_all_padding">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/app_name_textView"
            android:gravity="center"
            android:paddingTop="@dimen/main_title_text_top_padding"
            android:textSize="@dimen/main_title_text_size"
            android:typeface="sans"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_appversion"
            android:id="@+id/app_version_textView"
            android:singleLine="true"
            android:textStyle="normal"
            android:visibility="visible"
            android:gravity="center"
        android:paddingLeft="@dimen/main_app_version_left_padding"
        android:textSize="@dimen/main_app_version_text_size" />

	<EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_editText"
        android:gravity="center"
        android:textStyle="normal"
        android:typeface="sans"
        android:visibility="visible"
        android:hint="@string/main_id_text_field_hint"
        android:singleLine="true"
        android:layout_marginTop="@dimen/main_id_text_filed_top_margin"
	    android:textSize="@dimen/main_id_text_filed_text_size"
	    android:enabled="true"
	    android:layout_gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_submit_button_text"
        android:id="@+id/submit_button"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:clickable="true"
        android:typeface="sans"
        android:visibility="visible"
        android:singleLine="true"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/main_submit_button_top_margin"
	    android:textSize="@dimen/main_submit_button_text_size" />
</LinearLayout>

