<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/main_layout_all_padding"
              android:gravity="center">

    <ImageView
            android:id="@+id/about_logoImageView"
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:contentDescription="@string/text_logo"
            android:scaleType="center"
            android:src="@drawable/ic_launcher"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:text="@string/text_appversion"
            android:textSize="@dimen/about_version_text_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/about_version_text_top_margin"
            android:typeface="sans"
            android:id="@+id/about_versionTextView"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:text="@string/text_developedby"
            android:textSize="@dimen/about_developedby_text_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/about_developedby_text_top_margin"
            android:typeface="sans"
            android:id="@+id/about_developedByTextView"/>

</LinearLayout>

