<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="@dimen/main_layout_all_padding"
            android:orientation="vertical">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <!-- Staff Name -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/staffui_title_staffname"
                android:textColor="#000000"
                android:typeface="sans"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginTop="@dimen/staff_title_top_margine"
                android:layout_marginBottom="@dimen/staff_title_bottom_margine"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
            <EditText
                    android:layout_width="@dimen/ui_editview_withaction_width"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_nameEditText"
                    android:layout_gravity="left|center_vertical"
                    android:typeface="sans"
                    android:visibility="visible"
                    android:textStyle="normal"
                    android:enabled="true"
                    android:clickable="false"
                    android:editable="false" android:singleLine="true"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_nameAction" android:src="@drawable/ic_action_copy_black"
                    android:visibility="visible" android:adjustViewBounds="true" android:baselineAlignBottom="false"
                    android:clickable="true" android:scaleType="center" android:cropToPadding="false"
                    android:layout_gravity="center"
                    android:contentDescription="@string/staffui_nameActionContentDescr"/>
        </LinearLayout>

        <!-- Staff Email -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/staffui_title_staffemail"
                android:textColor="#000000"
                android:typeface="sans"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginTop="@dimen/staff_title_top_margine"
                android:layout_marginBottom="@dimen/staff_title_bottom_margine"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
            <EditText
                    android:layout_width="@dimen/ui_editview_withaction_width"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_emailEditText"
                    android:layout_gravity="left|center_vertical"
                    android:typeface="sans"
                    android:visibility="visible"
                    android:textStyle="normal"
                    android:enabled="true"
                    android:clickable="true"
                    android:editable="false" android:singleLine="true"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_emailAction" android:src="@drawable/ic_action_mail_black"
                    android:visibility="visible" android:adjustViewBounds="true" android:baselineAlignBottom="false"
                    android:clickable="true" android:scaleType="center" android:cropToPadding="false"
                    android:layout_gravity="center"
                    android:contentDescription="@string/staffui_emailActionContentDescr"/>
        </LinearLayout>


        <!-- Staff Office -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/staffui_title_staffoffice"
                android:textColor="#000000"
                android:typeface="sans"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginTop="@dimen/staff_title_top_margine"
                android:layout_marginBottom="@dimen/staff_title_bottom_margine"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/staffui_officeEditText"
                android:layout_gravity="left|center_vertical"
                android:typeface="sans"
                android:visibility="visible"
                android:textStyle="normal"
                android:enabled="true"
                android:clickable="false"
                android:editable="false" android:singleLine="true"/>

        <!-- Staff Phone -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/staffui_title_staffphone"
                android:textColor="#000000"
                android:typeface="sans"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginTop="@dimen/staff_title_top_margine"
                android:layout_marginBottom="@dimen/staff_title_bottom_margine"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
            <EditText
                    android:layout_width="@dimen/ui_editview_withaction_width"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_phoneEditText"
                    android:layout_gravity="left|center_vertical"
                    android:typeface="sans"
                    android:visibility="visible"
                    android:textStyle="normal"
                    android:enabled="true"
                    android:clickable="true"
                    android:editable="false" android:singleLine="true"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_phoneAction" android:src="@drawable/ic_action_phone_black"
                    android:visibility="visible" android:adjustViewBounds="true" android:baselineAlignBottom="false"
                    android:clickable="true" android:scaleType="center" android:cropToPadding="false"
                    android:layout_gravity="center"
                    android:contentDescription="@string/staffui_phoneActionContentDescr"/>
        </LinearLayout>

        <!-- Staff Programme -->
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/staffui_title_staffprog"
                android:textColor="#000000"
                android:typeface="sans"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_marginTop="@dimen/staff_title_top_margine"
                android:layout_marginBottom="@dimen/staff_title_bottom_margine"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_gravity="center" android:orientation="horizontal">
            <EditText
                    android:layout_width="@dimen/ui_editview_withaction_width"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_progEditText"
                    android:layout_gravity="left|center_vertical"
                    android:typeface="sans"
                    android:visibility="visible"
                    android:textStyle="normal"
                    android:enabled="true"
                    android:clickable="true"
                    android:editable="false" android:singleLine="true"/>
            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/staffui_progAction" android:src="@drawable/ic_action_more_black"
                    android:visibility="visible" android:adjustViewBounds="true" android:baselineAlignBottom="false"
                    android:clickable="true" android:scaleType="center" android:cropToPadding="false"
                    android:layout_gravity="center"
                    android:contentDescription="@string/staffui_progActionContentDescr"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>